--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#">Contact</a>
         </nav>
     </header>
-
+<div class="text-center">
     <h1> My New Website </h1>
 
     <img src="assets/image-1.png"
@@ -24,20 +24,27 @@
 
     <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro molestias nostrum similique doloremque est fugiat consequatur autem cupiditate, sint dolor. Consectetur quo itaque beatae non hic obcaecati repudiandae ratione magni!</p>
 
-    <section>
+    <section id="contact-me">
         <h2>Contact Me</h2>
         
         <form>
+            <div class="form-control">
             <label>Name:</label>
             <input name="name" type="text" />
+            </div>
+
+            <div class="form-control">
             <label>Email:</label>
             <input name="email" type="email" />
-            <buuton>Send</buuton>
+            </div>
+
+            <button>Send</button>
         </form>
     </section>
     
     <footer>
         &copy; My New Website Productions
     </footer>
+    </div>
 </body>
 </html>
